compiler/tests/fixtures/compile_errors/string_capacity_mismatch.fe
contract Foo:
    pub def bar() -> String<3>:
        return String<3>("too long")